--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
   <button ion-button outline (click)="login()">Login</button>  
   <button ion-button outline (click)="logout()">Logout</button>
 
-  <ion-grid fixed>
+  <!--<ion-grid fixed>
 
      <ion-row align-items-center>
       <ion-col col-12 col-sm-6 col-md-3>
@@ -67,5 +67,5 @@
   <h1>My First Attribute Directive</h1>
   <p myHighlight>Highlight me!</p>
 
-  </ion-grid>
+  </ion-grid>-->
 </ion-content>
