--- a/src/pages/list/list.html
+++ b/src/pages/list/list.html
@@ -22,7 +22,7 @@
   
 
   <ion-list>
-    {{items2 | async | json}}
+    <!--{{items2 | async | json}}-->
   <ion-item-sliding *ngFor="let item of items2 | async ">
     
     <ion-item>
