--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,7 +10,13 @@
 <ion-content padding>
 
 
-  <button ion-button outline (click)="login()">Login</button>  
+
+
+  <button ion-button icon-right outline (click)="login()" >
+    Log in with google account 
+    <ion-icon name="logo-google"></ion-icon>
+  </button>
+ 
   <button ion-button outline (click)="logout()">Logout</button>
 
   <!--<ion-grid fixed>
